Bug fix
Prevent empty selection, try to prevent horizontal scroll on iphones

--- a/Style.css
+++ b/Style.css
@@ -2,3 +2,7 @@
  header,footer {
     visibility: hidden;
 }
+body {
+    overflow-x: hidden;
+    width: 100%;
+}
